k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  annotations:
    networking.gke.io/load-balancer-type: External
spec:
  selector:
    app: ghost
  ports:
    - protocol: TCP
      port: 2368   # This is the port the service listens on within the cluster
      targetPort: 3001   # This is the port your application listens on inside the container
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
