k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: ghost-isolution.com   # Replace with your actual domain
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/?(.*)"
        backend:
          service:
            name: ghost
            port:
              number: 2368
      - pathType: ImplementationSpecific
        path: "/mysql(/|$)(.*)"
        backend:
          service:
            name: mysql
            port:
              number: 3306
